--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#000000" />
-    <title>OgloszenioPol.pl</title>
+    <title>post.it</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo_favicon.ico">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
